<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/login_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2" android:textSize="28sp"
            android:fontFamily="@font/merriweather_bolditalic"/>
    <TextView
            android:text="@string/login_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textSize="13sp" android:fontFamily="@font/montserrat_regular"
            android:layout_marginBottom="52dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/linearLayout2"
            android:gravity="center_vertical"
            android:background="@drawable/background_google_login">

        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/google" android:layout_marginLeft="67dp" android:layout_marginTop="17dp"
                   android:layout_marginBottom="17dp"/>

        <TextView
                android:text="@string/login_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="67dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:textSize="15sp" android:textAllCaps="true"
                android:textStyle="bold" android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>