<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/clSettings">

        <TextView
                android:text="@string/tv_settings_beacons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" android:textSize="30sp"
                android:fontFamily="@font/merriweather_bolditalic" android:textColor="@color/colorPrimaryDark"/>
        <TextView
                android:text="Nadstropje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvSettingsNadstropje"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginTop="32dp" android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/montserrat_bold"/>
        <TextView
                android:text="@string/tvSettingsImeSobe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvSettingsImeSobe"
                app:layout_constraintTop_toBottomOf="@+id/tvSettingsNadstropje"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginTop="16dp" android:fontFamily="@font/montserrat_extrabold"
                android:textSize="18sp" android:textAllCaps="true" android:textColor="@color/colorPrimaryDark"/>
        <TextView
                android:text="@string/tvSettingsOpis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView5"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvSettingsImeSobe" android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_medium" android:textColor="@color/colorPrimaryDark"/>
        <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="0dp"
                android:layout_height="150dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>